--- a/wiki/TableOfContents.wiki
+++ b/wiki/TableOfContents.wiki
@@ -64,3 +64,4 @@
   * [HowToAccessViews How to Access Views] 
   * [HowToAddView How to Add a View to RuleBender]
   * [HowToGetBNGLModelAndListenForEditors How to get the BNGL models from editors]
+  * [HowToBuildObjectsFromAST How to build objects from an AST with the Builder pattern]
