Edited wiki page HowToBuildObjectsFromAST through web user interface.

--- a/wiki/HowToBuildObjectsFromAST.wiki
+++ b/wiki/HowToBuildObjectsFromAST.wiki
@@ -392,3 +392,289 @@ private void updateModel(BNGLModel model)
 If you run RuleBender, display the view, and open a file you should see something like the screenshot below where all of the molecule names are displayed in a list.
 
 http://rulebender.googlecode.com/svn/wiki/imgs/howTo/modelBuilder/modelBuilderFinal.png  
+
+
+= Full Source=
+The full source code examples are in the repository in rulebender.example, or the text is shown below.
+
+== ExampleView.java ==
+{{{
+
+package rulebender.example;
+
+import java.beans.PropertyChangeEvent;
+import java.beans.PropertyChangeListener;
+import java.util.ArrayList;
+
+import org.eclipse.swt.SWT;
+import org.eclipse.swt.widgets.Composite;
+import org.eclipse.swt.widgets.Label;
+import org.eclipse.ui.IPartListener2;
+import org.eclipse.ui.IWorkbenchPartReference;
+import org.eclipse.ui.part.ViewPart;
+
+import rulebender.editors.bngl.BNGLEditor;
+import rulebender.editors.bngl.model.BNGASTReader;
+import rulebender.editors.bngl.model.BNGLModel;
+
+public class ExampleView extends ViewPart implements IPartListener2
+{
+
+	// A label for output
+	private Label m_label;
+	
+	private ExampleModel m_myModel;
+	
+	// Generally nothing happens in the constructor
+	public ExampleView() {
+	
+	}
+
+	// This is where the view itself is defined using JFace widgets or SWT.
+	@Override
+	public void createPartControl(Composite parent) 
+	{
+		m_label = new Label(parent, SWT.BORDER);
+		m_label.setText("Hello from a new view!!!");
+
+		m_myModel = new ExampleModel();
+		
+		// Register the view as a part listener.
+		getSite().getPage().addPartListener(this);
+	}
+
+	// This gets called when the view gets focus from the user.  
+	// You do not have to implement it, but you can tell any of the
+	// view elements that you define about the focus event if you want to.
+	@Override
+	public void setFocus() {}
+
+	@Override
+	public void partActivated(IWorkbenchPartReference partRef) 
+	{
+		// If it's a bngl editor.   (Cannot remember why there is id and instanceof checking
+		// but I would not change it without serious testing.)
+		if(partRef.getId().equals("rulebender.editors.bngl") && partRef.getPart(false) instanceof BNGLEditor)
+		{	
+			// Get the model.
+			final BNGLModel model = ((BNGLEditor) partRef.getPart(false)).getModel();
+		
+			// Create a property changed listener for when files are saved and 
+			// models are updated.
+			PropertyChangeListener pcl = new PropertyChangeListener()
+			{
+				public void propertyChange(PropertyChangeEvent propertyChangeEvent) 
+				{
+					String filePath = ((BNGLModel) propertyChangeEvent.getSource()).getPathID();
+					String propertyName = propertyChangeEvent.getPropertyName();
+					
+					if(propertyName.equals(BNGLModel.AST))
+					{
+						//Update the display object that is associated with the path and ast. 
+						updateModel(model);
+						System.out.println("Property Changed on AST for " + filePath);
+					}
+				}
+			};
+				
+			model.addPropertyChangeListener(pcl);
+			
+			updateModel(model);
+		} // end if it's an editor block	
+	}
+	
+	private void updateModel(BNGLModel model)
+	{
+		// Create the builder instance.
+		ExampleModelBuilder builder = new ExampleModelBuilder();
+		
+		// Create the reader instance with the builder as input.
+		BNGASTReader reader = new BNGASTReader(builder);
+		
+		// Build the model.
+		reader.buildWithAST(model.getAST());
+		
+		// Get the model.
+		m_myModel = builder.getModel();
+		
+		// Update the display.
+		m_label.setText(m_myModel.toString());	
+	}
+
+	@Override
+	public void partBroughtToTop(IWorkbenchPartReference partRef) {
+		// TODO Auto-generated method stub
+		
+	}
+
+	@Override
+	public void partClosed(IWorkbenchPartReference partRef) {
+		// TODO Auto-generated method stub
+		
+	}
+
+	@Override
+	public void partDeactivated(IWorkbenchPartReference partRef) {
+		// TODO Auto-generated method stub
+		
+	}
+
+	@Override
+	public void partOpened(IWorkbenchPartReference partRef) {
+		// TODO Auto-generated method stub
+		
+	}
+
+	@Override
+	public void partHidden(IWorkbenchPartReference partRef) {
+		// TODO Auto-generated method stub
+		
+	}
+
+	@Override
+	public void partVisible(IWorkbenchPartReference partRef) {
+		// TODO Auto-generated method stub
+		
+	}
+
+	@Override
+	public void partInputChanged(IWorkbenchPartReference partRef) {
+		// TODO Auto-generated method stub
+		
+	}
+}
+}}}
+
+== ExampleModel.java ==
+
+{{{
+package rulebender.example;
+
+import java.util.ArrayList;
+
+public class ExampleModel 
+{
+	private ArrayList<String> m_moleculeList;
+	
+	public ExampleModel()
+	{
+		m_moleculeList = new ArrayList<String>();
+	}
+	
+	public void add(String mol)
+	{
+		m_moleculeList.add(mol);
+	}
+	
+	public String toString()
+	{
+		String toReturn = "Molecules:\n";
+				
+		for(String s : m_moleculeList)
+			toReturn += "\t" + s + "\n";
+				
+		return toReturn;
+	}
+}
+}}}
+
+== ExampleModelBuilder.java ==
+{{{
+package rulebender.example;
+
+import rulebender.contactmap.models.Molecule;
+import rulebender.editors.bngl.model.BNGLModelBuilderInterface;
+import rulebender.editors.bngl.model.ruledata.RuleData;
+
+public class ExampleModelBuilder implements BNGLModelBuilderInterface 
+{
+	
+	ExampleModel m_exampleModel;
+	
+	public ExampleModelBuilder()
+	{
+		m_exampleModel = new ExampleModel();
+	}
+	
+	@Override
+	public void foundMoleculeInSeedSpecies(Molecule molecule) 
+	{
+		m_exampleModel.add(molecule.getName());
+	}
+	
+	public ExampleModel getModel()
+	{
+		return m_exampleModel;
+	}
+	
+	@Override
+	public void foundMoleculeType(Molecule molecule) 
+	{
+		m_exampleModel.add(molecule.getName());
+	}
+
+
+	@Override
+	public void parameterFound(String id, String type, String value) {
+		// TODO Auto-generated method stub
+		
+	}
+
+	@Override
+	public void foundCompartment(String id, String volume, String outside) {
+		// TODO Auto-generated method stub
+		
+	}
+
+	@Override
+	public void foundBondInSeedSpecies(String moleName1, String compName1,
+			int compID1, String state1, String moleName2, String compName2,
+			int compID2, String state2) {
+		// TODO Auto-generated method stub
+		
+	}
+
+	@Override
+	public void foundRule(RuleData ruleData) {
+		// TODO Auto-generated method stub
+		
+	}
+
+	@Override
+	public void foundObservable(String observableID, String observableName,
+			String observableType) {
+		// TODO Auto-generated method stub
+		
+	}
+
+	@Override
+	public void foundObservablePattern(String observableID, String patternID) {
+		// TODO Auto-generated method stub
+		
+	}
+
+	@Override
+	public void foundObservablePatternMolecule(String observableID,
+			String patternID, String moleculeID, String moleculeName) {
+		// TODO Auto-generated method stub
+		
+	}
+
+	@Override
+	public void foundObservablePatternMoleculeComponent(String observableID,
+			String patternID, String moleculeID, String componentID,
+			String componentName) {
+		// TODO Auto-generated method stub
+		
+	}
+
+	@Override
+	public void foundObservablePatternMoleculeComponentState(
+			String observableID, String patternID, String moleculeID,
+			String componentID, String componentState) {
+		// TODO Auto-generated method stub
+		
+	}
+
+}
+}}}
