Edited wiki page TableOfContents through web user interface.

--- a/wiki/TableOfContents.wiki
+++ b/wiki/TableOfContents.wiki
@@ -64,4 +64,5 @@
   * [HowToAddView How to Add a View to RuleBender]
   * [HowToGetBNGLModelAndListenForEditors How to get the BNGL models from editors]
   * [HowToBuildObjectsFromAST How to build objects from an AST with the Builder pattern]
+  * [HowToRunSimulations How to run simulations]
  * [PotentialFirstSteps Potential First Steps]
