--- a/wiki/PotentialFirstSteps.wiki
+++ b/wiki/PotentialFirstSteps.wiki
@@ -1,3 +1,8 @@
-#A list of potential first step type project ideas.
+#summary A list of potential first step type project ideas.
 
-= =
+ * Highlight simulation errors in the text editor.
+ * Salient simulation results
+  * Popup the results
+  * Popup the results silently
+  * Show annotations in the file browser
+ * Simulation interface improvements (scanbatch)
