--- a/wiki/GettingStartedWithCode.wiki
+++ b/wiki/GettingStartedWithCode.wiki
@@ -1,10 +1,10 @@
 #summary Checking out and setting up the project.
 
-*Install eclipse
-*Install svn for eclipse
-*Import project from svn.
-*Right click on the project and select properties->java build path
-*Add lib/*.jar to build path.
-*Click 'new variable' and select plugin dependencies.
+* Install eclipse
+* Install svn for eclipse
+* Import project from svn.
+* Right click on the project and select properties->java build path
+* Add lib/*.jar to build path.
+* Click 'new variable' and select plugin dependencies.
 
-At this point there should not be any compile errors.
+At this point there should not be any compile errors.  To run the project, open the plugin.xml file and click the run button in the top right corner.
