--- a/wiki/GettingStartedWithCode.wiki
+++ b/wiki/GettingStartedWithCode.wiki
@@ -25,6 +25,6 @@ This wiki includes instructions for setting up your development environment, che
 ==Set up the project== 
  # Right click on the project and select properties->java build path
  # Add lib/{{{*}}}.jar to build path.
- # Click 'new variable' and select plugin dependencies.
+ # Click 'Add Library...' and select plugin dependencies.
 
 At this point there should not be any compile errors.  To run the project, open the plugin.xml file and click the run button in the top right corner.
